# bazel-python-boilerplate

./: BUILD.bazel  MODULE.bazel  README.md  cookiecutter.json  gazelle_python.yaml  install  intellisense  requirements.txt  update
.github/workflows/: tests.yml
hooks/: post_gen_project.sh
src/app/: BUILD.bazel  main.py
src/package/: BUILD.bazel  main.py
src/package/tests/: BUILD.bazel  main_test.py
src/server/: BUILD.bazel  main.py
tests/app/: BUILD.bazel  test_main.py
tools/vscode/: BUILD.bazel  vscode_import_generator.py
{{cookiecutter.project_name}}/: MODULE.bazel  README.md  intellisense  requirements.in  requirements.txt  update
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/src/package/: BUILD.bazel
{{cookiecutter.project_slug}}/: gazelle_python.yaml  install  intellisense  update
{{cookiecutter.project_slug}}/src/package/: main.py
