bazel_dep(name = "rules_python", version = "1.1.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "{{cookiecutter.python_version}}",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "gazelle", version = "0.41.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.1.0")