load("@rules_python//python:defs.bzl", "py_binary", "py_library")


py_binary(
    name = "vscode_import_generator",
    srcs = ["vscode_import_generator.py"],
    data = ["//:requirements"],
    visibility = ["//:__subpackages__"],
)


py_library(
    name = "vscode",
    srcs = [
        "__init__.py",
        "vscode_import_generator.py",
    ],
    visibility = ["//:__subpackages__"],
)
